--- a/NewsApp_v1/css/main.css
+++ b/NewsApp_v1/css/main.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #b0bec5;
+    background-color: #f5f5f5;
 }
 .myContent {
     margin: 20px;
@@ -12,9 +12,10 @@ body {
     display: none;
 }
 .menu-option {
-    height: 440px;
+    height: 390px;
     margin-bottom: 60px;
     text-align: center;
+    width: 200px;
 }
 .slider {
     float: right;
@@ -37,7 +38,7 @@ body {
     position: relative;
 }
 .bx-wrapper {
-    height: 440px;
+    height: 390px;
 }
 .bx-wrapper {
     margin-top: 25px;
@@ -51,11 +52,15 @@ body {
     justify-content: center
 }
 .display-img {
+    height: 100%;
+    width: 100%;
     display: block;
     margin: 0 auto;
 }
 .slide-description {
-    margin: 5px 0 0 0 !important;
+    /*5px*/
+    
+    margin: 0px 0 0 0 !important;
     padding: 5px !important;
     background-color: #d6d6d6;
     text-align: justify;
@@ -69,15 +74,17 @@ body {
     width: 99%;
 }
 .menu-option {
-    background-color: #d6d6d6;
+    background-color: hsla(214, 81%, 37%, 0.36);
     margin-top: 25px;
     color: #def;
+    border-radius: 2px 50px;
+    padding: 20px;
     text-overflow: ellipsis;
     white-space: nowrap;
     overflow: hidden;
 }
 .menu-option p {
-    line-height: 440px;
+    line-height: 390px;
     display: inline-block;
     vertical-align: middle;
     font-size: 15px;
@@ -89,7 +96,7 @@ body {
     text-shadow: 1px 4px 6px #def, 0 0 0 #000, 1px 4px 6px #def;
 }
 .header {
-    background-color: #171a21;
+    background-color: #ab1e5d;
     min-height: 70px;
     margin: 0px !important;
 }
@@ -159,4 +166,7 @@ body {
     float: right;
     list-style: none;
     cursor: pointer;
+}
+.article-container {
+    padding: 0 5px;
 }
