"Others" has been added

--- a/NewsApp_v3/css/main.css
+++ b/NewsApp_v3/css/main.css
@@ -272,3 +272,12 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;      
 */}
+.display-popup{
+      position: absolute;
+    top: 24%;
+    background: white;
+    left: 15%;
+}
+.fa-times{
+  float: right;
+}
